# fstar

./: README.md  pyproject.toml
experiments/: time.ipynb
fstar/: fstar_.py  hypergraph.py
