[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "fstar"
version = "0.0.2"
authors = [
  { name="Ryan DeWolfe", email="ryandewolfe33@gmail.com" },
]
description = "Community Detection Post Processing."
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

requires-python = ">=3.10"
dependencies = [
    "numpy >= 2.0",
    "scipy >= 1.10",
]

[tool.setuptools]
packages = ["fstar"]
